--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
-#can ignore specific files
-.DS_Store
-
-# Use wildcards as well
-*~
-*.html~
-*.css~
-*.db
-_config.inc.php
-backend/boatposition.txt
+logs
+project/project
+project/target
+target
+tmp
+.history
+dist
+/.idea
+/*.iml
+/out
+/.idea_modules
+/.classpath
+/.project
+/RUNNING_PID
