implemented draft of boat_info > controller + model + view + routes

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -9,7 +9,7 @@ application.secret="XpVjfR:M4w5`hK2`gmW]>x0WMR`>XHA6y<U@wKdbNpV_=101cEb`vVQ7eu93
 
 # The application languages
 # ~~~~~
-application.langs="en"
+application.langs="de"
 
 # Global object class
 # ~~~~~
@@ -22,8 +22,8 @@ application.langs="en"
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-# db.default.driver=org.h2.Driver
-# db.default.url="jdbc:h2:mem:play"
+db.default.driver=org.h2.Driver
+db.default.url="jdbc:h2:mem:play"
 # db.default.user=sa
 # db.default.password=
 
@@ -45,3 +45,5 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
+# Query the db
+ebean.default="models.*"
