--- a/conf/application.conf
+++ b/conf/application.conf
@@ -23,7 +23,7 @@ application.langs="de"
 # By convention, the default datasource is named `default`
 #
 db.default.driver=org.h2.Driver
-db.default.url="jdbc:h2:mem:play"
+db.default.url="jdbc:h2:database/seapaldb"
 # db.default.user=sa
 # db.default.password=
 
