--- a/conf/application.conf
+++ b/conf/application.conf
@@ -15,7 +15,7 @@ application.langs="de"
 # ~~~~~
 # Define the Global object class for this application.
 # Default to Global in the root package.
-# global=Global
+global=de.htwg.seapal.SeapalGlobal
 
 # Database configuration
 # ~~~~~ 
