Moved javascript files to get compiled via google closure compiler Fixed routing paths in javascript files

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -15,7 +15,7 @@ application.langs="de"
 # ~~~~~
 # Define the Global object class for this application.
 # Default to Global in the root package.
-global=de.htwg.seapal.SeapalGlobal
+application.global=de.htwg.seapal.SeapalGlobal
 
 # Database configuration
 # ~~~~~ 
@@ -46,4 +46,4 @@ logger.play=INFO
 logger.application=DEBUG
 
 # Query the db
-ebean.default="models.*"
+ebean.default="de.htwg.seapal.web.models.*"
