--- a/conf/application.conf
+++ b/conf/application.conf
@@ -30,7 +30,7 @@ db.default.url="jdbc:h2:database/seapaldb"
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
-# evolutionplugin=disabled
+evolutionplugin=disabled
 
 # Logger
 # ~~~~~
@@ -46,4 +46,4 @@ logger.play=INFO
 logger.application=DEBUG
 
 # Query the db
-ebean.default="de.htwg.seapal.web.models.*"
+#ebean.default="de.htwg.seapal.web.models.*"
